# incubator-tvm

./: .devcontainer.json  .gitignore  CMakeLists.txt  Dockerfile.dev_cpu  pyproject.toml  tir_visualize_test.py
apps/cpp_rpc/: rpc_server.cc
cmake/: clang_flags.cmake
cmake/modules/: LLVMBuildFromSource.cmake
docker/: build_dev.sh
include/tvm/ir/: visualize.h
include/tvm/relay/: op.h  transform.h
include/tvm/runtime/: data_type.h  object.h
include/tvm/tir/: transform.h
nnvm/tests/cpp/: op_test.cc  tuple_test.cc
python/tvm/: testing.py
python/tvm/auto_scheduler/: measure.py  utils.py
python/tvm/contrib/: cc.py  nvcc.py  popen_pool.py
python/tvm/driver/: __init__.py  build_module.py
python/tvm/exec/: rpc_server.py
python/tvm/relay/: build_module.py
python/tvm/rpc/: base.py  client.py  proxy.py  server.py  tracker.py
src/driver/: driver_api.cc
src/ir/: visualize_graph.cc
src/relay/analysis/: annotated_region_set.cc
src/relay/backend/: build_module.cc  compile_engine.cc  graph_runtime_codegen.cc
src/relay/ir/: expr_functor.cc
src/relay/transforms/: annotate_compiler.cc  annotate_device_placement.cc  annotate_target.cc  external_function_to_internal.cc  external_to_internal_function.cc  (+1 more)
src/rpc/: base.cc  base.h  rpc_tracker.cc  rpc_tracker.h  server.cc  server.h  tracker.cc  tracker.h  util.h
src/runtime/: object.cc
src/support/: socket.h  utils.h
tests/cpp/: arith_simplify_test.cc  attrs_test.cc  auto_scheduler_test.cc  build_module_test.cc  container_test.cc  expr_test.cc  ir_functor_test.cc  main.cc  object_protocol_test.cc  packed_func_test.cc  parallel_for_test.cc  pattern_match_test.cc  relay_build_module_test.cc  relay_pass_type_infer_test.cc  relay_transform_sequential_test.cc  support_test.cc  target_test.cc  topi_ewise_test.cc  tracker.cc  tracker_test.cc  utvm_runtime_standalone_test.cc
tutorials/auto_scheduler/: tune_network_x86.py
tutorials/autotvm/: tune_conv2d_cuda.py  tune_relay_x86.py
(+35 files in other folders)
