# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[tool.black]
line-length = 100
target-version = ['py36']
include = '(\.pyi?$)'
exclude = '''

(
  /(
      \.github
    | \.tvm
    | \.tvm_test_data
    | \.vscode
    | \.venv
    | 3rdparty
    | build\/
    | cmake\/
    | conda\/
    | docker\/
    | docs\/
    | golang\/
    | include\/
    | jvm\/
    | licenses\/
    | nnvm\/
    | rust\/
    | src\/
    | vta\/
    | web\/
  )/
)
'''

[tool.poetry]
name = "tvm"
version = "0.1.0"
description = "TVM"
authors = ["Robert Kimball <bobkimball@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyaml = "^20.4.0"
structlog = "^20.1.0"
keras2onnx = "1.6.1"
onnx = "1.6"
onnxruntime = "1.4.0"
tflite = "2.2.0"
tensorflow = "2.1.0"
tensorflow-estimator = "^2.1.0"
numpy = "1.20.1"
decorator = "4.4.2"
psutil = "5.7.2"
tornado = "6.0.4"
cloudpickle = "^1.6.0"
xgboost = "^1.4.1"
black = "^21.5b0"
isort = "^5.8.0"
mypy = "^0.812"
flake8 = "^3.9.2"
ffi-navigator = "^0.5.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.8.1"
pytest-mock = "^3.1.0"
pytest-faker = "^2.0.0"
pytest-testmon = "^1.0.3"
